@@ -709,6 +709,7 @@ Other memory:
 	  the availability of TX data.
 	* Moved urgent data info into device structure.
 	* TCP and ICMP protocols can now be disabled.
+	* Added UDP test in examples/udp
 </pre></ul>
 
 <table width ="100%">
